# rover

Group 3.1 - Final Submission/: Antriebskomponenten.xlsx  Mars_Robot.aia  Wiring_MARS.fzz  timeline - Mobile Working Robotic Systems.xlsx
Group 3.1 - Final Submission/CAD Models/: Component_housing_assembly.stp  Driver_plate_top.stp  Housing_lid.stp  Housing_main_body.stp  README.md  Splash_protection_cover.stp
Group 3.1 - Final Submission/CAD Models/GCode/: CE3E3V2_Housing_lid_new.gcode  CE3E3V2_Housing_new_split_lower.gcode  CE3E3V2_driver_plate_bottom_v1.gcode  CE3E3V2_driver_plate_top_v1.gcode  README.md
Group 3.1 - Final Submission/Data Sheets/: README.md
Group 3.1 - Final Submission/codes/: Readme.md  cmd_publisher_node.py  flask_Code.py  main.c
Group 3.1 - Final Submission/codes/4_Stepper_2DC/: 4_Stepper_2DC.ino
Group 3.1 - Final Submission/codes/DC_Motor_Control_Blank/: DC_Motor_Control_Blank.ino
Group 3.1 - Final Submission/codes/Stepper_Motor_code_blank/: Stepper_Motor_code_blank.ino
Group 3.1 - Final Submission/codes/demo/: demo.ino
STM32/: .cproject  .gitignore  .mxproject  STM32.ioc  STM32G474RETX_FLASH.ld  STM32G474RETX_RAM.ld
STM32/Core/Inc/: main.h  mwrs_config.h  mwrs_control.h  mwrs_drivers.h  mwrs_modbus.h  mwrs_protocol.h  mwrs_units.h  stm32g4xx_it.h
STM32/Core/Src/: main.c  mwrs_control.c  mwrs_drivers.c  mwrs_modbus.c  mwrs_protocol.c  mwrs_units.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
STM32/tests/: build_firmware.sh  run_host_tests.ps1  test_protocol.c
docs/: Pi与STM32接口对接说明.md  ROS2架构与节点关系图.md  ROS2部署后测试与硬件控制启动手册.md  STM32固件v1协议与电机驱动改动说明_2026-07-03.md  STM32直连电机驱动硬件测试方案.md  STM32负责人USB通信与协议修改交接说明.md  mars_rover_ros2_architecture_usage_guide.md  mars_rover_ros2_development_requirements.md  mars_rover_ros2_high_level_implementation_plan.md  mars_rover_ros2_implementation_spec.md  stm32_direct_motor_driver_hardware_test_plan.md  后续Linux电脑与Pi部署Codex交接说明.md  火星车Pi部署与SSH联调实施报告.md  火星车ROS2实现规格说明.md  火星车ROS2开发需求文档.md  火星车ROS2当前逻辑流与待决设计问题.md  火星车ROS2控制逻辑改进记录_2026-07-03.md  火星车ROS2架构使用指南.md  火星车ROS2项目汇报提纲.md  火星车ROS2高层实现方案.md  火星车硬件部署与联调操作手册.md
mars_rover_ws/: .dockerignore  .gitignore  Dockerfile  README.md
mars_rover_ws/demo/: README.md  demo_robot_description.py  demo_rover.urdf.xacro  dry_run_pose_demo.py  rover_demo.sh  rviz_demo.rviz
mars_rover_ws/src/mars_rover_bringup/: CMakeLists.txt  package.xml
mars_rover_ws/src/mars_rover_bringup/config/: robot_geometry.yaml  safety_limits.yaml  single_wheel_test.yaml  stm32_bridge.yaml
mars_rover_ws/src/mars_rover_bringup/launch/: pc_teleop.launch.py  pi_bringup_dry_run.launch.py  pi_bringup_real_full_vehicle.launch.py  pi_bringup_real_single_wheel.launch.py  pi_bringup_serial_echo.launch.py
mars_rover_ws/src/mars_rover_bringup/rviz/: mars_rover.rviz
mars_rover_ws/src/mars_rover_control/: package.xml  setup.cfg  setup.py
mars_rover_ws/src/mars_rover_control/mars_rover_control/: __init__.py  constants.py  drive_mode_manager.py  four_wheel_kinematics.py  hardware_policy.py  joint_state_republisher.py  keyboard_teleop.py  kinematics.py  safety_gate.py  safety_policy.py  serial_codec.py  stm32_bridge.py
mars_rover_ws/src/mars_rover_control/test/: test_hardware_policy.py  test_keyboard_teleop.py  test_kinematics.py  test_safety_policy.py  test_serial_codec.py
mars_rover_ws/src/mars_rover_description/: CMakeLists.txt  package.xml
mars_rover_ws/src/mars_rover_description/urdf/: mars_rover.urdf.xacro
mars_rover_ws/src/mars_rover_msgs/: CMakeLists.txt  package.xml
mars_rover_ws/src/mars_rover_msgs/msg/: ControlState.msg  DriveMode.msg  Stm32Status.msg  WheelSetpoint.msg  WheelSetpointArray.msg  WheelState.msg  WheelStateArray.msg
mars_rover_ws/src/mars_rover_tests/: CMakeLists.txt  README.md  package.xml
test_artifacts/2026-07-03_pc_pi_stm32/: SHA256SUMS  terminal_01_environment_and_rates.txt  terminal_02_project_chain.txt  terminal_03_protocol_and_reconnect.txt  terminal_capture.html  电脑-Pi-STM32纯软件链路测试报告_2026-07-03.md
