<?xml version="1.0"?>
<!--
  mars_rover_bringup 包清单。
  该包集中存放启动文件、参数文件和 RViz 配置，用于把各个 ROS 2 节点组合起来运行。
-->
<package format="3">
  <name>mars_rover_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration files for the MARS rover first-stage ROS 2 stack.</description>
  <maintainer email="maintainer@example.com">MARS Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mars_rover_control</exec_depend>
  <exec_depend>mars_rover_description</exec_depend>
  <exec_depend>mars_rover_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
