<?xml version="1.0"?>
<package format="3">
  <name>mars_rover_control</name>
  <version>0.1.0</version>
  <description>Python ROS 2 nodes for MARS rover safety, kinematics, STM32 bridge, and joint states.</description>
  <maintainer email="maintainer@example.com">MARS Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mars_rover_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
