<?xml version="1.0"?>
<!--
  mars_rover_description 包清单。
  该包提供简化 URDF/Xacro，用于 robot_state_publisher 和 RViz 可视化。
-->
<package format="3">
  <name>mars_rover_description</name>
  <version>0.1.0</version>
  <description>Minimal URDF description for the MARS rover first-stage ROS 2 stack.</description>
  <maintainer email="maintainer@example.com">MARS Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
