<?xml version="1.0"?>
<!--
  mars_rover_msgs 包清单。
  该包定义项目自定义消息，是高层运动学节点、bridge 节点和状态发布节点之间的接口契约。
-->
<package format="3">
  <name>mars_rover_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 interfaces for the MARS rover high-level control stack.</description>
  <maintainer email="maintainer@example.com">MARS Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
