<?xml version="1.0"?>
<!--
  mars_rover_tests 包清单。
  该包用于放置测试说明和未来集成测试资源。
-->
<package format="3">
  <name>mars_rover_tests</name>
  <version>0.1.0</version>
  <description>Dry-run and no-hardware test notes for the MARS rover ROS 2 workspace.</description>
  <maintainer email="maintainer@example.com">MARS Rover Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>mars_rover_bringup</exec_depend>
  <exec_depend>mars_rover_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
